Cat Pages Style Improved & flex taking up too much space fixed

--- a/style/cat-style.css
+++ b/style/cat-style.css
@@ -42,13 +42,13 @@ ul.breadcrumbs {
 main#cat-page {
     display: flex;
     flex-direction: column;
-    margin: 3em 4em;
+    margin: 3em 4em 0 4em;
 }
 
 .cat-flex-item {
     margin: 0 2em;
     padding: 10px 2em;
-    flex: 1 1 50px;
+    flex: auto auto 50px;
 }
 
 .cat-flex-item h3 {
